distribution/istio-resources/DEBUGGING-allow-in-cluster-redirect.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-in-cluster-redirect
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
    - operation:
        hosts:
        - '*'
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-in-cluster-redirect
  namespace: karl-schriek
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
    - operation:
        hosts:
        - '*'
